# ChangeLog for virtual/perl-Devel-PPPort
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Devel-PPPort/ChangeLog,v 1.22 2015/02/18 08:37:05 ago Exp $

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org>
  perl-Devel-PPPort-3.210.0.ebuild:
  Stable for alpha, wrt bug #536790

  17 Feb 2015; Markus Meier <maekke@gentoo.org>
  perl-Devel-PPPort-3.210.0.ebuild:
  arm stable, bug #536790

  17 Feb 2015; Agostino Sarubbo <ago@gentoo.org>
  perl-Devel-PPPort-3.210.0.ebuild:
  Stable for ia64, wrt bug #536790

  16 Feb 2015; Agostino Sarubbo <ago@gentoo.org>
  perl-Devel-PPPort-3.210.0.ebuild:
  Stable for sparc, wrt bug #536790

  15 Feb 2015; Agostino Sarubbo <ago@gentoo.org>
  perl-Devel-PPPort-3.210.0.ebuild:
  Stable for ppc64, wrt bug #536790

  14 Feb 2015; Agostino Sarubbo <ago@gentoo.org>
  perl-Devel-PPPort-3.210.0.ebuild:
  Stable for ppc, wrt bug #536790

  13 Feb 2015; Jeroen Roovers <jer@gentoo.org>
  perl-Devel-PPPort-3.210.0.ebuild:
  Stable for HPPA (bug #536790).

  13 Feb 2015; Agostino Sarubbo <ago@gentoo.org>
  perl-Devel-PPPort-3.210.0.ebuild:
  Stable for x86, wrt bug #536790

  08 Feb 2015; Mikle Kolyada <zlogene@gentoo.org>
  perl-Devel-PPPort-3.210.0.ebuild:
  amd64 stable wrt bug #536790

*perl-Devel-PPPort-3.200.0-r4 (08 Nov 2014)

  08 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -perl-Devel-PPPort-3.200.0-r3.ebuild, +perl-Devel-PPPort-3.200.0-r4.ebuild:
  Remove Perl 5.16 as provider

  28 Jul 2014; Mikle Kolyada <zlogene@gentoo.org>
  perl-Devel-PPPort-3.200.0-r3.ebuild:
  amd64 stable wrt bug #381424

*perl-Devel-PPPort-3.200.0-r3 (19 Jul 2014)

  19 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -perl-Devel-PPPort-3.200.0-r2.ebuild, +perl-Devel-PPPort-3.200.0-r3.ebuild,
  perl-Devel-PPPort-3.210.0.ebuild:
  Improve dependencies

*perl-Devel-PPPort-3.210.0 (05 Jul 2014)

  05 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>