@@ -1,21 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Devel-PPPort/perl-Devel-PPPort-3.200.0-r4.ebuild,v 1.1 2014/11/08 15:05:40 dilfridge Exp $
-
-EAPI=5
-
-DESCRIPTION="Virtual for ${PN#perl-}"
-HOMEPAGE=""
-SRC_URI=""
-
-LICENSE=""
-SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 sparc x86"
-IUSE=""
-
-DEPEND=""
-RDEPEND="
-	|| ( =dev-lang/perl-5.18* ~perl-core/${PN#perl-}-${PV} )
-	!<perl-core/${PN#perl-}-${PV}
-	!>perl-core/${PN#perl-}-${PV}-r999
-"
