@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Devel-PPPort
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Devel-PPPort/ChangeLog,v 1.22 2015/02/18 08:37:05 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Devel-PPPort/ChangeLog,v 1.23 2015/06/04 21:39:07 dilfridge Exp $
+
+*perl-Devel-PPPort-3.310.0 (04 Jun 2015)
+
+  04 Jun 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  -perl-Devel-PPPort-3.200.0-r4.ebuild, +perl-Devel-PPPort-3.310.0.ebuild:
+  Add Perl 5.22 version, remove old
 
   18 Feb 2015; Agostino Sarubbo <ago@gentoo.org>
   perl-Devel-PPPort-3.210.0.ebuild:
